--- a/calc.css
+++ b/calc.css
@@ -1,5 +1,13 @@
 <style>
-
+        .calculadora{
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.8);
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            border-radius: 15px;
+            padding: 15px;
+        }
         .botao{
             width: 50px;
             height: 50px;
