--- a/calc.css
+++ b/calc.css
@@ -1,4 +1,11 @@
 <style>
+        .fundo{
+            background-image: linear-gradient(45deg,black, crimson);
+            height: 100vh;
+            color: #fff;
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
         .calculadora{
             position: absolute;
             background-color: rgba(0, 0, 0, 0.8);
