--- a/calc.css
+++ b/calc.css
@@ -1,5 +1,5 @@
 <style>
-        .fundo{
+        .back{
             background-image: linear-gradient(45deg,black, crimson);
             height: 100vh;
             color: #fff;
