--- a/estilo.css
+++ b/estilo.css
@@ -26,7 +26,7 @@ body {
     font-weight: bold;
     text-shadow: 2px 2px 6px #97e4fc
   }
-  #projetos {
+  #projetos1 {
     backdrop-filter: blur(10px);
     border-style: outset;
     border-color: #91fdf4;
