--- a/calc.css
+++ b/calc.css
@@ -1,5 +1,5 @@
 <style>
-        .back{
+        #back{
             height: 100vh;
             color: #fff;
             font-family: Arial, Helvetica, sans-serif;
