--- a/calc.css
+++ b/calc.css
@@ -1,4 +1,10 @@
 <style>
+        back{
+            height: 100vh;
+            color: #fff;
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
 
         .calculadora{
             position: absolute;
